<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PassBy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="title">Pass By</string>
	<string name="home">Home</string>
	<string name="user">User</string>
	<string name="login">Login</string>
	<string name="app_info">App Info</string>
	<string name="user_info">User Info</string>
	<string name="login_info">Login Info</string>
</resources>
